Fix code style and apply proper java code recommendations