@@ -5,6 +5,7 @@ import com.google.common.collect.Multimap;
 import com.google.common.collect.Multimaps;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
+import java.io.BufferedReader;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -32,11 +33,15 @@ public class VelocityPluginCommandManager {
     public static VelocityPluginCommandManager load(Path path) throws IOException {
         VelocityPluginCommandManager manager = new VelocityPluginCommandManager(path);
         if (Files.exists(path)) {
-            Map<String, Collection<String>> rawMap = gson.fromJson(
-                    Files.newBufferedReader(path),
-                    new TypeToken<Map<String, Collection<String>>>(){}.getType()
-            );
-            rawMap.forEach(manager.pluginCommands::putAll);
+            try (BufferedReader reader = Files.newBufferedReader(path)) {
+                Map<String, Collection<String>> rawMap = gson.fromJson(
+                        reader,
+                        new TypeToken<Map<String, Collection<String>>>() {}.getType()
+                );
+                if (rawMap != null) {
+                    rawMap.forEach(manager.pluginCommands::putAll);
+                }
+            }
         }
 
         return manager;
@@ -66,9 +71,9 @@ public class VelocityPluginCommandManager {
             Files.createDirectories(path.getParent());
         }
 
-        Files.write(
+        Files.writeString(
                 path,
-                gson.toJson(pluginCommands.asMap()).getBytes(StandardCharsets.UTF_8),
+                gson.toJson(pluginCommands.asMap()),
                 StandardOpenOption.CREATE,
                 StandardOpenOption.TRUNCATE_EXISTING
         );
